--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">CARLO.CODES</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">CARLO.CODES <i class="fas fa-code"></i></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -100,10 +100,10 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>Alevato Realty</h4>
-              <a href="#" class="btn-light">
+              <a href="#" class="btn-outline-dark">
                 <i class="fas fa-eye"></i> Website
               </a>
-              <a href="#" class="btn-light">
+              <a href="#" class="btn-outline-dark">
                 <i class="fab fa-github"></i> Github
               </a>
               <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
@@ -120,7 +120,13 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Misty</h4>
+                  <h4 class="text-white">Restaurant</h4>
+                  <a href="#" class="btn-outline-light">
+                      <i class="fas fa-eye"></i> Website
+                    </a>
+                    <a href="#" class="btn-outline-light">
+                      <i class="fab fa-github"></i> Github
+                    </a>
                   <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
@@ -138,7 +144,13 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">Mountains</h4>
+                  <h4 class="text-white">E-commerce</h4>
+                  <a href="#" class="btn-outline-light">
+                      <i class="fas fa-eye"></i> Website
+                    </a>
+                    <a href="#" class="btn-outline-light">
+                      <i class="fab fa-github"></i> Github
+                    </a>
                   <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
@@ -147,7 +159,29 @@
           </div>
         </div>
 
-      </div>
+        <!-- Project One Row -->
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+            <div class="col-lg-6">
+              <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+              <div class="bg-black text-center h-100 project">
+                <div class="d-flex h-100">
+                  <div class="project-text w-100 my-auto text-center text-lg-left">
+                    <h4 class="text-white">Agency</h4>
+                    <a href="#" class="btn-outline-light">
+                        <i class="fas fa-eye"></i> Website
+                      </a>
+                      <a href="#" class="btn-outline-light">
+                        <i class="fab fa-github"></i> Github
+                      </a>
+                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                    <hr class="d-none d-lg-block mb-0 ml-0">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
     </section>
 
     <!-- Signup Section -->
@@ -212,14 +246,20 @@
         </div>
 
         <div class="social d-flex justify-content-center">
-          <a href="#" class="mx-2">
+          <a href="https://twitter.com/carlocabrera" class="mx-2">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://www.facebook.com/carlofx" class="mx-2">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#" class="mx-2">
+          <a href="https://www.linkedin.com/in/carlocabrera/" class="mx-2">
+              <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/carlocabrera" class="mx-2">
             <i class="fab fa-github"></i>
+          </a>
+          <a href="https://dribbble.com/carlocabrera" class="mx-2">
+              <i class="fab fa-dribbble"></i>
           </a>
         </div>
 
@@ -230,7 +270,7 @@
     <footer class="bg-black small text-center text-white-50">
 
       <div class="container">
-              Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="far fa-heart" aria-hidden="true"></i> by <a href="http://carlo.codes" target="_blank">CARLO.CODES</a>
+              Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="far fa-heart" aria-hidden="true"></i> by <a href="http://carlo.codes" target="_blank">CARLO.CODES <i class="fas fa-code"></i></a>
       </div>
       
     </footer>
