--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="shortcut icon" href="img/favicon-code.ico" type="image/x-icon">
+
     <title>CARLO.CODES - Web Developer</title>
 
     <!-- Bootstrap core CSS -->
