--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <i class="fab fa-node-js"></i>
                 <i class="fab fa-npm"></i>
                 <i class="fab fa-php"></i>
+                <i class="fab fa-laravel"></i>
                 <i class="fas fa-database"></i>
                 <i class="fab fa-wordpress"></i>
               </h2>
