--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <a href="#" class="btn-outline-dark">
                 <i class="fab fa-github"></i> Github
               </a>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+              <p class="text-black-50 mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. A quibusdam iusto officia, illum aut qui, ab omnis vitae nobis distinctio alias. Numquam ipsa aliquam tenetur magni repellat beatae voluptatem omnis!</p>
             </div>
           </div>
         </div>
@@ -130,7 +130,7 @@
                     <a href="#" class="btn-outline-light">
                       <i class="fab fa-github"></i> Github
                     </a>
-                  <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                  <p class="mb-0 text-white-50">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi sunt unde sapiente aliquid iure adipisci nulla nobis commodi voluptatum soluta, delectus, facilis labore eaque deserunt, facere dolor quis ipsum beatae?</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
@@ -154,7 +154,7 @@
                     <a href="#" class="btn-outline-light">
                       <i class="fab fa-github"></i> Github
                     </a>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                  <p class="mb-0 text-white-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui non saepe tempore ducimus reprehenderit. Quia saepe reprehenderit, consequatur accusamus recusandae ipsam, consequuntur autem ab nostrum culpa, minus ex molestiae. Velit.</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
@@ -178,7 +178,7 @@
                       <a href="#" class="btn-outline-light">
                         <i class="fab fa-github"></i> Github
                       </a>
-                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                    <p class="mb-0 text-white-50">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum molestias error sit placeat pariatur eos consequuntur quod aperiam cupiditate necessitatibus corrupti laborum enim nam et, natus facilis in excepturi nobis!</p>
                     <hr class="d-none d-lg-block mb-0 ml-0">
                   </div>
                 </div>
