--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="carlocabrera.pdf">Resume <i class="fas fa-download"></i></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -230,7 +233,7 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">emailcarlo@me.com</a>
+                  <a href="mailto:emailcarlo@me.com">emailcarlo@me.com</a>
                 </div>
               </div>
             </div>
