--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="carlocabrera.pdf">Resume <i class="fas fa-download"></i></a>
+              <a class="nav-link js-scroll-trigger" href="carlocabrera.pdf" download>Resume <i class="fas fa-download"></i></a>
             </li>
           </ul>
         </div>
