Updated Portfolio Section

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>Alevato Realty</h4>
-              <a href="#" class="btn-outline-dark">
+              <a href="http://alevatorealty.cf/" class="btn-outline-dark">
                 <i class="fas fa-eye"></i> Website
               </a>
-              <a href="#" class="btn-outline-dark">
+              <a href="https://github.com/carlocabrera/alevato-realty" class="btn-outline-dark">
                 <i class="fab fa-github"></i> Github
               </a>
-              <p class="text-black-50 mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. A quibusdam iusto officia, illum aut qui, ab omnis vitae nobis distinctio alias. Numquam ipsa aliquam tenetur magni repellat beatae voluptatem omnis!</p>
+              <p class="text-black-50 mb-0">Central Florida Real Estate Website</p>
             </div>
           </div>
         </div>
