--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <a href="http://alevatorealty.cf/" class="btn-outline-dark">
                 <i class="fas fa-eye"></i> Website
               </a>
-              <a href="https://github.com/carlocabrera/alevato-realty" class="btn-outline-dark">
+              <a href="https://github.com/carlocabrera/alevatorealty" class="btn-outline-dark">
                 <i class="fab fa-github"></i> Github
               </a>
               <p class="text-black-50 mb-0">Central Florida Real Estate Website</p>
@@ -120,20 +120,20 @@
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+            <img class="img-fluid" src="img/pethero.jpg" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Restaurant</h4>
-                  <a href="#" class="btn-outline-light">
+                  <h4 class="text-white">Pet Hero</h4>
+                  <a href="https://pethero.cf/" class="btn-outline-light">
                       <i class="fas fa-eye"></i> Website
                     </a>
-                    <a href="#" class="btn-outline-light">
+                    <a href="https://github.com/carlocabrera/pethero" class="btn-outline-light">
                       <i class="fab fa-github"></i> Github
                     </a>
-                  <p class="mb-0 text-white-50">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi sunt unde sapiente aliquid iure adipisci nulla nobis commodi voluptatum soluta, delectus, facilis labore eaque deserunt, facere dolor quis ipsum beatae?</p>
+                  <p class="mb-0 text-white-50">Local Shelter Pet Search Web Application</p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
