NY Times Scraper

--- a/index.html
+++ b/index.html
@@ -144,20 +144,20 @@
         <!-- Project Two Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+            <img class="img-fluid" src="img/nytimes.jpg" alt="">
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">E-commerce</h4>
-                  <a href="#" class="btn-outline-light">
+                  <h4 class="text-white">NY Times</h4>
+                  <a href="https://nytnewsarticlescraper.herokuapp.com/" class="btn-outline-light">
                       <i class="fas fa-eye"></i> Website
                     </a>
-                    <a href="#" class="btn-outline-light">
+                    <a href="https://github.com/carlocabrera/nytimes" class="btn-outline-light">
                       <i class="fab fa-github"></i> Github
                     </a>
-                  <p class="mb-0 text-white-50">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui non saepe tempore ducimus reprehenderit. Quia saepe reprehenderit, consequatur accusamus recusandae ipsam, consequuntur autem ab nostrum culpa, minus ex molestiae. Velit.</p>
+                  <p class="mb-0 text-white-50">New York Times News Articles Website Scraper</p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
@@ -166,7 +166,7 @@
         </div>
 
         <!-- Project One Row -->
-        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
             <div class="col-lg-6">
               <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
             </div>
@@ -187,7 +187,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
     </section>
 
     <!-- Signup Section -->
